tests/golden/type_errors/typed_array_literal_element_mismatch.cd
let bad: [number] = [1, "bad"];
